--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,12 +4,14 @@
   "description": "Node js server for the training client",
   "main": "index.js",
   "scripts": {
-	"start": "nodemon app.js"
+    "start": "nodemon app.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.3"
   },
   "dependencies": {
     "express": "^4.18.1"
