--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.11.39",
     "nodemon": "^2.0.16",
-    "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "ts-node": "^10.8.1"
   }
 }
