--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "start:dev": "react-scripts start",
-    "start:prod": "pnpm run build && pnpx serve -s build",
+    "start:prod": "npm run build && npx serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
