--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start:dev": "nodemon app.ts",
     "start:prod": "SET NODE_ENV=production node app.ts",
-    "build:client": "cd .. && cd client && pnpm build"
+    "build:client": "cd .. && cd client && npm build"
   },
   "author": "",
   "license": "ISC",
