--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,13 +11,19 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.39",
     "nodemon": "^2.0.16",
     "typescript": "^4.7.3"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "ts-node": "^10.8.1"
+    "reflect-metadata": "^0.1.13",
+    "ts-node": "^10.8.1",
+    "typeorm": "^0.3.6"
   }
 }
