--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,12 +1,22 @@
 {
   "compilerOptions": {
-    "target": "es2016",
     "module": "commonjs",
+    "declaration": true,
+    "removeComments": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
+    "target": "es2017",
+    "sourceMap": true,
     "outDir": "./dist",
-
+    "baseUrl": "./",
     "esModuleInterop": true,
-
-    "strict": true,
-    "skipLibCheck": true
+    "incremental": true,
+    "skipLibCheck": true,
+    "strictNullChecks": false,
+    "noImplicitAny": false,
+    "strictBindCallApply": false,
+    "forceConsistentCasingInFileNames": false,
+    "noFallthroughCasesInSwitch": false
   }
 }
