--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -53,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5"
   }
