--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -17,9 +17,8 @@
     "@types/date-fns": "^2.6.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.39",
-    "@types/react": "^18.0.12",
-    "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
+    "formik": "^2.2.9",
     "date-fns": "^2.28.0",
     "i18next": "^21.8.9",
     "i18next-browser-languagedetector": "^6.1.4",
@@ -30,7 +29,8 @@
     "react-i18next": "^11.17.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start:dev": "react-scripts start",
@@ -39,7 +39,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3001",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -59,6 +58,8 @@
     ]
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.2"
+    "@types/js-cookie": "^3.0.2",
+    "@types/react": "^18.0.12",
+    "@types/react-dom": "^18.0.5"
   }
 }
