--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -18,8 +18,8 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.39",
     "axios": "^0.27.2",
-    "formik": "^2.2.9",
     "date-fns": "^2.28.0",
+    "formik": "^2.2.9",
     "i18next": "^21.8.9",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.1",
@@ -28,6 +28,8 @@
     "react-dom": "^18.1.0",
     "react-i18next": "^11.17.2",
     "react-scripts": "5.0.1",
+    "stylis": "^4.1.1",
+    "stylis-plugin-rtl": "^2.1.1",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
@@ -60,6 +62,7 @@
   "devDependencies": {
     "@types/js-cookie": "^3.0.2",
     "@types/react": "^18.0.12",
-    "@types/react-dom": "^18.0.5"
+    "@types/react-dom": "^18.0.5",
+    "@types/stylis": "^4.0.2"
   }
 }
