--- a/package.json
+++ b/package.json
@@ -1,21 +1,38 @@
 {
-  "name": "training",
-  "version": "1.0.0",
-  "description": "monorepo for drivers-map website that contain the client and server projects",
-  "main": "index.js",
-  "workspaces": [
-    "./packages/*"
-  ],
-  "scripts": {
-    "start:client:dev": "npm run start:dev --workspace=training-client",
-    "start:client:prod": "npm run start:prod --workspace=training-client",
-    "start:server:dev": "npm run start:dev --workspace=training-server",
-    "start:server:prod": " npm run start:prod --workspace=training-server",
-    "start:client:server": "npm run build:client --workspace=training-server"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Nidal-Marwan/Via-Training.git"
-  },
-  "homepage": "https://github.com/Nidal-Marwan/Via-Training#readme"
+   "name": "training",
+   "version": "1.0.0",
+   "description": "monorepo for drivers-map website that contain the client and server projects",
+   "main": "index.js",
+   "workspaces": [
+      "./packages/*"
+   ],
+   "scripts": {
+      "start:client:dev": "npm run start:dev --workspace=training-client",
+      "start:client:prod": "npm run start:prod --workspace=training-client",
+      "start:server:dev": "npm run start:dev --workspace=training-server",
+      "start:server:prod": " npm run start:prod --workspace=training-server",
+      "start:client:server": "npm run build:client --workspace=training-server",
+      "start": "ts-node src/index.ts",
+      "typeorm": "typeorm-ts-node-commonjs"
+   },
+   "repository": {
+      "type": "git",
+      "url": "git+https://github.com/Nidal-Marwan/Via-Training.git"
+   },
+   "homepage": "https://github.com/Nidal-Marwan/Via-Training#readme",
+   "devDependencies": {
+      "@types/node": "^16.11.10",
+      "ts-node": "10.7.0",
+      "typescript": "4.5.2"
+   },
+   "dependencies": {
+      "@types/jsonwebtoken": "^8.5.8",
+      "body-parser": "^1.19.1",
+      "express": "^4.18.1",
+      "express-session": "^1.17.3",
+      "jsonwebtoken": "^8.5.1",
+      "pg": "^8.4.0",
+      "reflect-metadata": "^0.1.13",
+      "typeorm": "0.3.6"
+   }
 }
