--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,30 +1,35 @@
 {
-  "name": "training-server",
-  "version": "1.0.0",
-  "description": "Node js server for the training client",
-  "main": "index.js",
-  "scripts": {
-    "start:dev": "nodemon app.ts",
-    "start:prod": "SET NODE_ENV=production node app.ts",
-    "build:client": "cd .. && cd client && npm build"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/express": "^4.17.13",
-    "@types/node": "^16.11.39",
-    "nodemon": "^2.0.16",
-    "typescript": "^4.7.3"
-  },
-  "dependencies": {
-    "bcrypt": "^5.0.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "pg": "^8.7.3",
-    "reflect-metadata": "^0.1.13",
-    "ts-node": "^10.8.1",
-    "typeorm": "^0.3.6"
-  }
+   "name": "training-server",
+   "version": "1.0.0",
+   "description": "Node js server for the training client",
+   "main": "index.js",
+   "scripts": {
+      "start:dev": "nodemon app.ts",
+      "start:prod": "SET NODE_ENV=production node app.ts",
+      "build:client": "cd .. && cd client && npm build",
+      "start": "ts-node src/index.ts",
+      "typeorm": "typeorm-ts-node-commonjs"
+   },
+   "author": "",
+   "license": "ISC",
+   "devDependencies": {
+      "@types/bcrypt": "^5.0.0",
+      "@types/express": "^4.17.13",
+      "@types/jsonwebtoken": "^8.5.8",
+      "@types/node": "^16.11.10",
+      "nodemon": "^2.0.16",
+      "ts-node": "10.7.0",
+      "typescript": "4.5.2"
+   },
+   "dependencies": {
+      "bcrypt": "^5.0.1",
+      "body-parser": "^1.19.1",
+      "cors": "^2.8.5",
+      "dotenv": "^16.0.1",
+      "express": "^4.17.2",
+      "pg": "^8.4.0",
+      "reflect-metadata": "^0.1.13",
+      "ts-node": "^10.8.1",
+      "typeorm": "0.3.6"
+   }
 }
