--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -27,6 +27,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-i18next": "^11.17.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "stylis": "^4.1.1",
     "stylis-plugin-rtl": "^2.1.1",
