--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
       "lint:client:fix": "eslint packages/client/src/**/*.{ts,tsx} --fix",
       "lint:server:fix": "eslint packages/server/src/**/*.{ts,tsx} --fix",
       "lint:client": "eslint packages/client/src/**/*.{ts,tsx}",
-      "lint:server": "eslint packages/server/src/**/*.{ts,tsx}"
+      "lint:server": "eslint packages/server/src/**/*.{ts,tsx}",
+      "prepare": "husky install"
    },
    "repository": {
       "type": "git",
@@ -34,6 +35,7 @@
       "eslint-plugin-jsx-a11y": "^6.5.1",
       "eslint-plugin-react": "^7.30.0",
       "eslint-plugin-react-hooks": "^4.6.0",
+      "husky": "^8.0.1",
       "prettier": "2.7.1",
       "ts-node": "10.7.0",
       "typescript": "4.5.2"
