--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -27,8 +27,11 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-i18next": "^11.17.2",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "stylis": "^4.1.1",
     "stylis-plugin-rtl": "^2.1.1",
     "typescript": "^4.7.3",
@@ -58,6 +61,9 @@
     "@types/js-cookie": "^3.0.2",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
+    "@types/react-redux": "^7.1.24",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
     "@types/stylis": "^4.0.2"
   }
 }
