--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -26,6 +26,7 @@
     "js-cookie": "^3.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-geolocated": "^4.0.3",
     "react-i18next": "^11.17.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
