--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,7 +7,7 @@
 		"start:dev": "nodemon app.ts",
 		"start:prod": "SET NODE_ENV=production node app.ts",
 		"build:client": "cd .. && cd client && npm build",
-		"start": "ts-node src/index.ts",
+		"start": "ts-node index.ts",
 		"typeorm": "typeorm-ts-node-commonjs",
 		"lint:client:fix": "eslint packages/client/src/**/*.{ts,tsx} --fix",
 		"lint:server:fix": "eslint packages/server/src/**/*.{ts,tsx} --fix",
