--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
       "start:server:dev": "npm run start:dev --workspace=training-server",
       "start:server:prod": " npm run start:prod --workspace=training-server",
       "start:client:server": "npm run build:client --workspace=training-server",
-      "start": "node packages/server/app.ts",
+      "start": "node packages/server/build/app.js",
       "heroku-postbuild": "cd packages && cd client && npm install && npm run build",
       "typeorm": "typeorm-ts-node-commonjs",
       "lint:client:fix": "eslint packages/client/src/**/*.{ts,tsx} --fix",
